<resources>
    <string name="app_name">سما المسافر</string>
    <string name="desc_offer_image">offer image</string>
    <string name="txt_special_offer" translatable="true">عروض مصممه لك</string>
    <string name="txt_custom_offers" translatable="true">البرامج السياحيه الخاصه</string>
    <string name="txt_history">جميع التعاملات</string>
    <string name="txt_call_us">اتصل بنا</string>
    <string name="txt_share">شارك البرنامج</string>
    <string name="txt_sign_out">تسجيل خروج</string>
    <string name="txt_request_offer">اطلب العرض الان</string>
    <string name="txt_fav_offers">البرامج المفضله</string>
    <string name="dsc_social_media">social_media</string>
    <string name="txt_notifi_message">برجاء ادخال بياناتك وستصلك رساله للتواصل معك من احد ممثلينا</string>
    <string name="txt_name">الاسم</string>
    <string name="txt_first">الاول</string>
    <string name="txt_family">العائله</string>
    <string name="txt_number">رقم الجوال</string>
    <string name="txt_name_two">الثاني</string>
    <string name="txt_date_from">المغادره</string>
    <string name="txt_date_to">الرجوع</string>
    <string name="txt_ppl_number">عدد الاشخاص</string>
    <string name="txt_appropriate_date">التاريخ المناسب</string>
    <string name="txt_adults">كبار</string>
    <string name="txt_over65">كبار فوق ٦٥ سنه</string>
    <string name="txt_children">اطفال ۲-۱۲ سنه</string>
    <string name="txt_infant">رضع ۰ - ۲ سنه</string>
    <string name="txt_desc">استفسارات</string>
    <string name="txt_done_request">اطلب العرض</string>
    <string name="txt_contact_us">تواصل معنا مباشره علي </string>
    <string name="txt_offer_delivered">تم ايصال الطلب. ستصلك رساله عاجلا من احد ممثلينا</string>
    <string name="txt_if_invited">في حاله تم دعوتك الي البرنامج بواسطه احد ممثلينا برجاء ادخال الرقم الخاص به</string>
    <string name="txt_welcom">تمتع بتصفح عروض سما المسافر المختلفه</string>
    <string name="txt_sign_in_again">برجاء اعاده تسجيل الدخول</string>
    <string name="txt_require_internet">برجاء تأكد من وجود انترنت</string>
    <string name="txt_error_signOut">نعتذر حدث خطأ حاول تسجيل الخروج مره اخري</string>

    <string name="img">image/*</string>
    <string name="image_picker">Complete Action Using</string>


    <string name="facebook_app_id">2165674750334030</string>
    <string name="fb_login_protocol_scheme">fb2165674750334030</string>

    <!-- ... -->
    <string name="facebook_application_id" translatable="false">APP_ID</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>

    <string name="twitter_consumer_key" translatable="false">fERj7n8gX5UGy7FcXDnb5NSjP</string>
    <string name="twitter_consumer_secret" translatable="false">s18xM6PrG1HVaYbMLmTjaBY4gB9nOZVSsC1fkpLGha5mLjZgFv</string>
    <string name="background">background</string>
    <string name="txt_targeted_place">الوجهه السياحيه</string>
    <string name="txt_from_place">من</string>
    <string name="txt_to_place">ألي</string>
    <string name="txt_destenation">وجهه السفر</string>
    <string name="txt_budget_req">الميزانيه</string>
    <string name="choose_what_you_like">برجاء اختيار ماتفضل بين</string>
    <string name="txt_offer_details">تفاصيل الطلب</string>
    <string name="txt_write_your_message">اكتب رسالتك ..</string>
    <string name="txt_youll_be_answered">سيتم الرد علي طلبكم في اسرع وقت</string>
    <string name="txt_no_history">يبدو انك لم تحزم امتعتك للسفر بعد ..</string>
    <string name="txt_all_your_deals_will_be_here">جميع تعاملاتك سوف تظهر هنا</string>
    <string name="first_number">966555593814</string>
    <string name="second_number">966556865563</string>
    <string name="third_number">00966125503003</string>
    <string name="fourth_number">00966127331497</string>
    <string name="txt_contact_whats"> او من خلال ارقامنا علي الواتس آب</string>
    <string name="txt_image_done">تم اضافه الصوره</string>
    <string name="txt_error_adding_image">برجاء محاوله اضافه الصوره مره اخري</string>

</resources>
