<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/dp_8">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_8"
            android:drawableStart="@drawable/req_alarm_icon"
            android:text="@string/txt_notifi_message"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            style="@style/tv_request_main"
            android:drawablePadding="@dimen/dp_8"
            android:text="@string/txt_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_first_name"
                style="@style/et_request_special_offer"
                android:hint="@string/txt_first" />

            <EditText
                android:id="@+id/et_second_name"
                style="@style/et_request_special_offer"
                android:hint="@string/txt_name_two" />

            <EditText
                android:id="@+id/et_third_name"
                style="@style/et_request_special_offer"
                android:hint="@string/txt_family" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:ems="10"
            android:hint="@string/txt_number"
            android:inputType="number" />


        <TextView
            style="@style/tv_request_main"
            android:text="@string/txt_appropriate_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_date_from"
                style="@style/et_date_req"
                android:hint="@string/txt_date_from"
                tools:ignore="KeyboardInaccessibleWidget" />

            <EditText
                android:id="@+id/et_date_to"
                style="@style/et_date_req"
                android:hint="@string/txt_date_to" />
        </LinearLayout>

        <TextView
            style="@style/tv_request_main"
            android:text="@string/txt_targeted_place" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_place_from"
                style="@style/et_date_req"
                android:hint="@string/txt_from_place"
                android:inputType="text"
                tools:ignore="KeyboardInaccessibleWidget" />

            <EditText
                android:id="@+id/et_place_to"
                style="@style/et_date_req"
                android:hint="@string/txt_to_place"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            style="@style/tv_request_main"
            android:text="@string/txt_ppl_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_ppl_adults"
                style="@style/et_request_ppl"
                android:hint="@string/txt_adults" />

            <EditText
                android:id="@+id/et_ppl_over65"
                style="@style/et_request_ppl"
                android:hint="@string/txt_over65" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_children"
                style="@style/et_request_ppl"
                android:hint="@string/txt_children" />

            <EditText
                android:id="@+id/et_infant"
                style="@style/et_request_ppl"
                android:hint="@string/txt_infant" />
        </LinearLayout>

        <TextView
            style="@style/tv_request_main"
            android:text="برجاء اختيار ماتفضل بين" />

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:sbg_animateSelector="bounce"
            app:sbg_animateSelectorDuration="1000"
            app:sbg_backgroundColor="@android:color/white"
            app:sbg_dividerColor="@android:color/darker_gray"
            app:sbg_dividerPadding="10dp"
            app:sbg_dividerRadius="10dp"
            app:sbg_dividerSize="1dp"
            app:sbg_position="1"
            app:sbg_radius="2dp"
            app:sbg_ripple="true"
            app:sbg_rippleColor="@android:color/darker_gray"
            app:sbg_selectorColor="@android:color/darker_gray">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="10dp"
                android:text="Button 1"
                android:textAllCaps="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="10dp"
                android:text="Button 2"
                android:textAllCaps="false" />

        </co.ceryle.segmentedbutton.SegmentedButtonGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16">


            <EditText
                android:id="@+id/et_quires"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_desc"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/tv_if_invited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/txt_if_invited"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/emp_unique_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btn_special_offer_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:minWidth="60dp"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_16"
            android:paddingStart="@dimen/dp_16"
            android:paddingTop="@dimen/dp_8"
            android:text="@string/txt_done_request"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:pb_colorNormal="@color/colorAccent" />

    </LinearLayout>
</ScrollView>